sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:88: error: unclosed comment
/*def cocktailSort() 
^AlgCocktailSort2:2: error: Missing closing brace `}' assumed here
def cocktailSort2()
^AlgCocktailSort2:14: error: expected class or object definition
{
^